--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev --respawn src/app.ts",
-    "start:prod": "node dist/app.js"
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn src/app.ts"
   },
   "author": "",
   "license": "ISC",
