--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@safe-global/api-kit": "^2.4.2",
+    "@safe-global/protocol-kit": "^4.0.2",
+    "@safe-global/safe-core-sdk-types": "^5.0.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
